--- a/4-log-in/index.html
+++ b/4-log-in/index.html
@@ -14,7 +14,7 @@
         <p><a href="/privacy-policy">Privacy policy</a> & <a href="/terms-of-service">terms of service</a></p>
       </div>
       <div class="form-container">
-        <p class="close"></p>
+        <div class="close-btn">×</div>
         <form>
           <div class="form-input">
             <label for="username">Username</label>
