sign in page adjustments

--- a/4-log-in/index.html
+++ b/4-log-in/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" type="image/png" href="./img/favicon.png" />
+    <link rel="stylesheet" href="./styles/shared.css" />
+    <link rel="stylesheet" href="./styles/image-block.css" />
+    <link rel="stylesheet" href="./styles/form.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
@@ -40,8 +42,8 @@
             />
           </div>
           <div class="form-control">
-            <button class="btn-submit" type="submit">Get Started</button>
-            <p>or <a href="#">Sign In</a></p>
+            <button class="btn" type="submit">Get Started</button>
+            <p>or <a href="./login/login.html">Sign In</a></p>
           </div>
         </form>
       </div>
