--- a/4-log-in/login/login.html
+++ b/4-log-in/login/login.html
@@ -30,7 +30,7 @@
             <input type="password" id="password" name="password" required />
           </div>
           <div class="form-control">
-            <button class="btn" type="submit">Log In</button>
+            <button class="btn" id="submit-btn" type="submit">Log In</button>
             <p>or <a href="../index.html">Sign Up</a></p>
           </div>
         </form>
